feat(search-plugins): add Gradle wrapper and fix OpenSearch 3.x compilation
S69-01: Generate Gradle 8.10 wrapper (gradlew, gradlew.bat, wrapper JAR)
for reproducible builds without requiring local Gradle installation.

S69-02: Fix OpenSearch 3.x API breaking changes:
- Settings.getAsArray() -> Settings.getAsList() (OS 3.x removal)
- Environment.configFile() -> Environment.configDir() (OS 3.x rename)
- Settings.getAsBoolean() returns boxed Boolean (null-safe handling)
- Plugin constructor now accepts Settings parameter (OS 3.x requirement)

S69-03: Native JNI library built successfully for darwin-arm64 via
cargo build --release -p mecab-ko-elasticsearch --features jni-bindings.
Binary (801KB dylib) placed in native/darwin-arm64/ but excluded from
git per .gitignore (*.dylib). CI pipeline handles multi-platform builds.